--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@headlessui/react": "^1.7.17",
+    "axios": "^1.6.5",
     "clsx": "^2.0.0",
     "lucide-react": "^0.303.0",
     "next": "14.0.4",
